<resources>
    <string name="app_name">Cab App</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="app_title">Cabbie App</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="choose_model">Choose Car model</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="booking_status_Available">Available</string>
    <string-array name="roles">
        <item>Admin</item>
        <item>Manager</item>
        <item>User</item>
        <item>Driver</item>
    </string-array>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_login">Login</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="admin">Admin</string>
    <string name="from_location_colon">From:</string>
    <string name="from_location">From</string>
    <string name="to_location_colon">To:</string>
    <string name="to_location">To</string>
    <string name="boarding_point">Boarding point</string>
    <string name="boarding_point_colon">Boarding point:</string>
    <string name="driver_to_allot">Driver to Allot</string>
    <string name="car">Car</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="driver_selection">Driver Selection</string>
    <string name="user_name_colon">User Name:</string>
    <string name="user_name">User Name</string>
    <string name="user_designation_colon">Designation:</string>
    <string name="user_designation">Designation</string>
    <string name="booking">Booking</string>
    <string name="book">Book</string>
    <string name="driver">Driver</string>
    <string name="car_management">Car Management</string>
    <string name="driver_management">Driver Management</string>
    <string name="vehicle_no">Vehicle no</string>
    <string name="driver_name">Driver Name</string>
    <string name="model_name">Model name</string>
    <string name="seat_no">Seat no</string>
    <string name="add_vehicle">Add Car</string>
    <string name="add_driver">Add Driver</string>
    <string name="update_driver">Update Driver</string>
    <string name="update_car">Update Car</string>
    <string name="del_driver">Delete Driver</string>
    <string name="del_car">Delete Car</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_details">Car details</string>
    <string name="booking_details">Booking details</string>
    <string name="model_name_colon">Model name :</string>

    <string name="vehicle_no_colon">Vehicle no:</string>
    <string name="departure_date">Departure date</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_colon">Start Time:</string>
    <string name="departure_date_colon">Departure date:</string>
    <string name="arrival_date">Arrival date</string>
    <string name="arrival_date_colon">Arrival date:</string>
</resources>