<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.cabapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_admin"
            app:destination="@+id/fragment_admin" />
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@+id/fragment_login" />
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@+id/fragment_car_management" />

    </fragment>

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.cabapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@+id/fragment_signup" />
    </fragment>

    <fragment
        android:id="@+id/fragment_admin"
        android:name="com.example.cabapp.ui.admin.AdminFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/fragment_car_management"
        android:name="com.example.cabapp.ui.car.management.CarManagementFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_car_management" />

    <fragment
        android:id="@+id/fragment_signup"
        android:name="com.example.cabapp.ui.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup" >
    </fragment>

</navigation>