<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

     <TextView
        android:id="@+id/text_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="87dp"
        android:text="@string/driver_selection" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_driver"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_driver"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="46dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/drop_down_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/driver_to_allot"
            android:textIsSelectable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="297dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/button_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="238dp"
        android:layout_marginBottom="299dp"
        android:text="@string/reject" />
</RelativeLayout>