<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<Button
    android:id="@+id/button_sign_out"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="12dp"
    android:layout_alignParentEnd="true"
    android:text="Sign out"/>

    <TextView
        android:id="@+id/text_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="87dp"
        android:text="@string/booking" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_role"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_booking"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="46dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/drop_down_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/choose_model"
            android:textIsSelectable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="151dp"
        android:layout_marginBottom="294dp"
        android:text="@string/next" />
</RelativeLayout>